# zkEverything

./: .gitignore  GhostVault.sol  NoZkash.md  README.md
agent-backend/: .env.example  jest.config.js  package-lock.json  package.json
agent-backend/src/: agent.ts  server.ts
agent-backend/src/agent/: crypto.test.ts  crypto.ts  routes.ts  supabase.ts
agent-backend/src/auth/: middleware.test.ts  middleware.ts
agent-backend/src/lib/: bn254-crypto.ts  bn254-init.ts  ghost-library.ts  ghost_vault_idl.json  mint.ts
agent-backend/src/solana/: client.ts  errors.test.ts  errors.ts
agent-backend/src/tools/: send-private-payment.ts
agent-ui/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
agent-ui/app/: layout.tsx  page.tsx
architecture/: architecture.md
docs/: production-setup.md
docs/drafts/: ai-agent-platform.md
docs/research/: solana-colosseum-hackathon-brief.md  solana-feasibility-technical.md
issues/: 006-pooled-escrow-graph-privacy.md  prd.md
issues/done/: 001-workspace-scaffold.md  002-initialize-instruction.md  003-deposit-instruction.md  004-announce-instruction.md  005-redeem-instruction-full-flow.md  007-project-scaffolding.md  008-backend-chat-skeleton.md  009-frontend-chat-ui.md  010-solana-payment-flow.md  011-error-handling-and-polish.md
prototype/: AI_AGENT_MCP.md  Anchor.toml  TECH_BRIEF.md  package.json  tsconfig.json
prototype/programs/ghost_vault/: Cargo.toml
prototype/programs/ghost_vault/src/: lib.rs
prototype/relayer/: .env.example  package-lock.json  package.json  server.ts  tsconfig.json
prototype/tests/: ghost_vault.ts
prototype/ts/: bn254-crypto.ts  ghost-library.ts  mint.ts
solana/: Anchor.toml  Cargo.toml
solana/programs/bn254_bench/: Cargo.toml
solana/programs/bn254_bench/src/: lib.rs
solana/programs/ghost_vault/: Cargo.toml
solana/programs/ghost_vault/src/: lib.rs
solana/tests/: bn254_bench.ts  ghost_vault.ts
(+6 files in other folders)
