[package]
name = "ghost_vault"
version = "0.1.0"
description = "NozKash GhostVault — prototype"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
# Pin indexmap to 2.7.x: platform-tools v1.46/v1.47 ship Cargo 1.79/1.84 which
# can't parse hashbrown 0.17's edition=2024 Cargo.toml. indexmap 2.7.x pulls in
# hashbrown 0.15.x (edition=2021) instead.
indexmap = "~2.7"
solana-secp256k1-recover = "2.2.1"
sha3 = { version = "0.10", default-features = false }
