[package]
name = "ghost_vault"
version = "0.1.0"
description = "NozKash GhostVault — Solana port (CU benchmark)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.0"
solana-secp256k1-recover = "2.2.1"
sha3 = { version = "0.10", default-features = false }
# Same indexmap pin as bn254_bench (see comment there)
indexmap = "~2.7"
